Implements user login and registration functionality
Adds login and registration endpoints to the server
Integrates user authentication using username and password
Updates user model to include password hashing for enhanced security